@@ -1,0 +1,7 @@
+	.text
+	.align 4
+	.long	1
+
+	.data
+	.align 4
+	.long	2
